@@ -2,6 +2,9 @@ main-menu (1.29) UNRELEASED; urgency=low
 
   * After the debconf priority was lowered because of an error, return to the
     default priority in one step when next a component runs successfully.
+  * Instead of lowering the debconf priority after the user backs up from a
+    question, match the priority at which the menu is displayed to the current
+    debconf priority. Closes: #331679.
 
  -- Frans Pop <fjp@debian.org>  Sat, 27 Dec 2008 09:07:42 +0100
 
